[package]
name = "cryptopals_lib"
version = "0.1.0"
authors = ["Penn Wilbert <pwilbert@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty_aes = {package = "rusty_aes", path = "../rusty_aes" }


[[bin]]
name = "set1_ch1"

[[bin]]
name = "set1_ch2"

[[bin]]
name = "set1_ch3"

[[bin]]
name = "set1_ch4"

[[bin]]
name = "set1_ch5"

[[bin]]
name = "set1_ch6"

[[bin]]
name = "set1_ch7"

[[bin]]
name = "set1_ch8"